[gd_scene load_steps=6 format=3 uid="uid://cf2vxnl5jg1yt"]

[ext_resource type="Script" uid="uid://b4ih4av2g2sx6" path="res://scripts/options_scene.gd" id="1_options_scene"]
[ext_resource type="Texture2D" uid="uid://cc7lcd2q5a2fa" path="res://art/images/photo_2025-11-28_14-13-12.jpg" id="2_xj27w"]
[ext_resource type="LabelSettings" uid="uid://bd8jgn62ikmod" path="res://art/ui/label_settings.tres" id="3_rwfm2"]
[ext_resource type="StyleBox" uid="uid://bdy376gr3b1gi" path="res://art/ui/Button.tres" id="4_8ln24"]
[ext_resource type="FontFile" uid="uid://crim4ump40gsk" path="res://art/fonts/ThaleahFat.ttf" id="4_g30mg"]

[node name="OptionsScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_options_scene")

[node name="DimBackground" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_xj27w")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Optionen"
label_settings = ExtResource("3_rwfm2")
horizontal_alignment = 1

[node name="TabContainer" type="TabContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/drop_mark_color = Color(0.07683582, 0.07683582, 0.07683582, 1)
theme_override_colors/font_selected_color = Color(0.9254902, 0.9254902, 0.9254902, 0.25490198)
theme_override_colors/font_hovered_color = Color(0.24705882, 0.24705882, 0.24705882, 0.68235296)
theme_override_fonts/font = ExtResource("4_g30mg")
theme_override_font_sizes/font_size = 32
current_tab = 2

[node name="AudioTab" type="Control" parent="VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 0

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/TabContainer/AudioTab"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AudioVBox" type="VBoxContainer" parent="VBoxContainer/TabContainer/AudioTab/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="MasterLabel" type="Label" parent="VBoxContainer/TabContainer/AudioTab/ScrollContainer/AudioVBox"]
layout_mode = 2
text = "Master Volume"
label_settings = ExtResource("3_rwfm2")
horizontal_alignment = 1

[node name="MasterSlider" type="HSlider" parent="VBoxContainer/TabContainer/AudioTab/ScrollContainer/AudioVBox"]
layout_mode = 2
size_flags_horizontal = 3
value = 80.0

[node name="MusicLabel" type="Label" parent="VBoxContainer/TabContainer/AudioTab/ScrollContainer/AudioVBox"]
layout_mode = 2
text = "Music Volume"
label_settings = ExtResource("3_rwfm2")
horizontal_alignment = 1

[node name="MusicSlider" type="HSlider" parent="VBoxContainer/TabContainer/AudioTab/ScrollContainer/AudioVBox"]
layout_mode = 2
size_flags_horizontal = 3
value = 70.0

[node name="VideoTab" type="Control" parent="VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/TabContainer/VideoTab"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VideoVBox" type="VBoxContainer" parent="VBoxContainer/TabContainer/VideoTab/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="FullscreenLabel" type="Label" parent="VBoxContainer/TabContainer/VideoTab/ScrollContainer/VideoVBox"]
layout_mode = 2
text = "Fullscreen"
label_settings = ExtResource("3_rwfm2")
horizontal_alignment = 1

[node name="FullscreenCheck" type="CheckBox" parent="VBoxContainer/TabContainer/VideoTab/ScrollContainer/VideoVBox"]
layout_mode = 2
size_flags_horizontal = 4

[node name="ResolutionLabel" type="Label" parent="VBoxContainer/TabContainer/VideoTab/ScrollContainer/VideoVBox"]
layout_mode = 2
text = "Resolution"
label_settings = ExtResource("3_rwfm2")
horizontal_alignment = 1

[node name="ResolutionOption" type="OptionButton" parent="VBoxContainer/TabContainer/VideoTab/ScrollContainer/VideoVBox"]
layout_mode = 2
size_flags_horizontal = 4

[node name="DevTab" type="Control" parent="VBoxContainer/TabContainer"]
layout_mode = 2
metadata/_tab_index = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/TabContainer/DevTab"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DevVBox" type="VBoxContainer" parent="VBoxContainer/TabContainer/DevTab/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="DevInfoLabel" type="Label" parent="VBoxContainer/TabContainer/DevTab/ScrollContainer/DevVBox"]
layout_mode = 2
text = "Dev-Modus: zeigt extra Balancing-Panel in der Level Auswahl"
label_settings = ExtResource("3_rwfm2")
horizontal_alignment = 1
autowrap_mode = 2

[node name="DevToggleButton" type="Button" parent="VBoxContainer/TabContainer/DevTab/ScrollContainer/DevVBox"]
custom_minimum_size = Vector2(500, 96)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(1, 1, 1, 0.29803923)
theme_override_colors/font_hover_color = Color(0.7647059, 0.7647059, 0.7647059, 0.8392157)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.3647059)
theme_override_constants/outline_size = 24
theme_override_fonts/font = ExtResource("4_g30mg")
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = ExtResource("4_8ln24")
theme_override_styles/pressed = ExtResource("4_8ln24")
theme_override_styles/hover = ExtResource("4_8ln24")
action_mode = 0
text = "Dev-Mode: OFF"
clip_text = true

[node name="ButtonContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 20

[node name="BackButton" type="Button" parent="VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(384, 96)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(1, 1, 1, 0.29803923)
theme_override_colors/font_hover_color = Color(0.7647059, 0.7647059, 0.7647059, 0.8392157)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.3647059)
theme_override_constants/outline_size = 24
theme_override_fonts/font = ExtResource("4_g30mg")
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = ExtResource("4_8ln24")
theme_override_styles/pressed = ExtResource("4_8ln24")
theme_override_styles/hover = ExtResource("4_8ln24")
action_mode = 0
text = "Back"
clip_text = true
