extends Control

## Ð£Ð½Ð¸Ð²ÐµÑ€ÑÐ°Ð»ÑŒÐ½Ñ‹Ð¹ ÐºÐ¾Ð¼Ð¿Ð¾Ð½ÐµÐ½Ñ‚ Ð½Ð°ÑÑ‚Ñ€Ð¾ÐµÐº - Ñ€Ð°Ð±Ð¾Ñ‚Ð°ÐµÑ‚ ÐºÐ°Ðº Ð¾Ñ‚Ð´ÐµÐ»ÑŒÐ½Ð°Ñ ÑÑ†ÐµÐ½Ð° Ð¸ ÐºÐ°Ðº Ð¼Ð¾Ð´Ð°Ð»ÑŒÐ½Ð¾Ðµ Ð¾ÐºÐ½Ð¾

const OPTIONS_PATH := "user://options.json"

var _options: Dictionary = {}
var _is_modal: bool = false  # Ð ÐµÐ¶Ð¸Ð¼ Ð¼Ð¾Ð´Ð°Ð»ÑŒÐ½Ð¾Ð³Ð¾ Ð¾ÐºÐ½Ð°

# --- ÑÑÑ‹Ð»ÐºÐ¸ Ð½Ð° Ð²Ð°Ð¶Ð½Ñ‹Ðµ ÐºÐ¾Ð½Ñ‚Ñ€Ð¾Ð»Ñ‹ ---
@onready var dim_background: ColorRect = $DimBackground
@onready var texture_rect: TextureRect = $TextureRect
@onready var tab_container: TabContainer = $VBoxContainer/TabContainer

# Audio
@onready var master_slider: HSlider = $VBoxContainer/TabContainer/AudioTab/ScrollContainer/AudioVBox/MasterSlider
@onready var music_slider: HSlider = $VBoxContainer/TabContainer/AudioTab/ScrollContainer/AudioVBox/MusicSlider

# Video
@onready var fullscreen_check: CheckBox = $VBoxContainer/TabContainer/VideoTab/ScrollContainer/VideoVBox/FullscreenCheck
@onready var resolution_option: OptionButton = $VBoxContainer/TabContainer/VideoTab/ScrollContainer/VideoVBox/ResolutionOption

# Dev
@onready var dev_toggle: Button = $VBoxContainer/TabContainer/DevTab/ScrollContainer/DevVBox/DevToggleButton

# Back
@onready var back_button: Button = $VBoxContainer/ButtonContainer/BackButton

func _ready() -> void:
	_load_options()
	
	# ÐžÐ¿Ñ€ÐµÐ´ÐµÐ»ÑÐµÐ¼ Ñ€ÐµÐ¶Ð¸Ð¼ Ñ€Ð°Ð±Ð¾Ñ‚Ñ‹:
	# Ð•ÑÐ»Ð¸ ÑÑ‚Ð¾ Ñ‚ÐµÐºÑƒÑ‰Ð°Ñ ÑÑ†ÐµÐ½Ð° (get_tree().current_scene == self), Ñ‚Ð¾ ÑÑ‚Ð¾ Ð¾Ñ‚Ð´ÐµÐ»ÑŒÐ½Ð°Ñ ÑÑ†ÐµÐ½Ð°
	# Ð•ÑÐ»Ð¸ ÐµÑÑ‚ÑŒ Ñ€Ð¾Ð´Ð¸Ñ‚ÐµÐ»ÑŒ Ð¸ ÑÑ‚Ð¾ Ð½Ðµ Ñ‚ÐµÐºÑƒÑ‰Ð°Ñ ÑÑ†ÐµÐ½Ð°, Ñ‚Ð¾ ÑÑ‚Ð¾ Ð¼Ð¾Ð´Ð°Ð»ÑŒÐ½Ð¾Ðµ Ð¾ÐºÐ½Ð¾
	var tree = get_tree()
	var current_scene = tree.current_scene if tree else null
	var parent = get_parent()
	_is_modal = (parent != null) and (current_scene != self)
	
	print("ðŸ” OptionsScene Ð¸Ð½Ð¸Ñ†Ð¸Ð°Ð»Ð¸Ð·Ð°Ñ†Ð¸Ñ:")
	print("   parent: ", parent)
	print("   current_scene: ", current_scene)
	print("   self: ", self)
	print("   _is_modal: ", _is_modal)
	
	# ÐÐ°ÑÑ‚Ñ€Ð°Ð¸Ð²Ð°ÐµÐ¼ Ð²Ð¸Ð´Ð¸Ð¼Ð¾ÑÑ‚ÑŒ ÑÐ»ÐµÐ¼ÐµÐ½Ñ‚Ð¾Ð² Ð² Ð·Ð°Ð²Ð¸ÑÐ¸Ð¼Ð¾ÑÑ‚Ð¸ Ð¾Ñ‚ Ñ€ÐµÐ¶Ð¸Ð¼Ð°
	if _is_modal:
		# ÐœÐ¾Ð´Ð°Ð»ÑŒÐ½Ñ‹Ð¹ Ñ€ÐµÐ¶Ð¸Ð¼: Ð¿Ð¾ÐºÐ°Ð·Ñ‹Ð²Ð°ÐµÐ¼ Ð·Ð°Ñ‚ÐµÐ¼Ð½Ñ‘Ð½Ð½Ñ‹Ð¹ Ñ„Ð¾Ð½, ÑÐºÑ€Ñ‹Ð²Ð°ÐµÐ¼ Ñ„Ð¾Ð½Ð¾Ð²ÑƒÑŽ Ñ‚ÐµÐºÑÑ‚ÑƒÑ€Ñƒ
		if dim_background:
			dim_background.visible = true
		if texture_rect:
			texture_rect.visible = false
		# ÐžÐ±Ñ€Ð°Ð±Ð°Ñ‚Ñ‹Ð²Ð°ÐµÐ¼ ÑÐ¾Ð±Ñ‹Ñ‚Ð¸Ñ Ð´Ð°Ð¶Ðµ Ð²Ð¾ Ð²Ñ€ÐµÐ¼Ñ Ð¿Ð°ÑƒÐ·Ñ‹
		process_mode = Node.PROCESS_MODE_ALWAYS
		mouse_filter = Control.MOUSE_FILTER_STOP
	else:
		# Ð ÐµÐ¶Ð¸Ð¼ Ð¾Ñ‚Ð´ÐµÐ»ÑŒÐ½Ð¾Ð¹ ÑÑ†ÐµÐ½Ñ‹: ÑÐºÑ€Ñ‹Ð²Ð°ÐµÐ¼ Ð·Ð°Ñ‚ÐµÐ¼Ð½Ñ‘Ð½Ð½Ñ‹Ð¹ Ñ„Ð¾Ð½, Ð¿Ð¾ÐºÐ°Ð·Ñ‹Ð²Ð°ÐµÐ¼ Ñ„Ð¾Ð½Ð¾Ð²ÑƒÑŽ Ñ‚ÐµÐºÑÑ‚ÑƒÑ€Ñƒ
		if dim_background:
			dim_background.visible = false
		if texture_rect:
			texture_rect.visible = true

	# --- Audio init ---
	if master_slider:
		master_slider.min_value = 0
		master_slider.max_value = 100
		master_slider.value = _options.get("master_volume", 80.0)
		master_slider.value_changed.connect(_on_master_volume_changed)

	if music_slider:
		music_slider.min_value = 0
		music_slider.max_value = 100
		music_slider.value = _options.get("music_volume", 70.0)
		music_slider.value_changed.connect(_on_music_volume_changed)

	# --- Video init ---
	if fullscreen_check:
		var is_fullscreen = bool(_options.get("fullscreen", DisplayServer.window_get_mode() == DisplayServer.WINDOW_MODE_FULLSCREEN))
		fullscreen_check.set_pressed_no_signal(is_fullscreen)
		fullscreen_check.toggled.connect(_on_fullscreen_toggled)

	if resolution_option:
		_fill_resolutions()
		var res_index := int(_options.get("resolution_index", 1))
		if res_index >= 0 and res_index < resolution_option.item_count:
			resolution_option.select(res_index)
			_on_resolution_selected(res_index)
		resolution_option.item_selected.connect(_on_resolution_selected)

	# --- Dev ---
	if dev_toggle:
		DevSettings.set_dev_mode(bool(_options.get("dev_mode", DevSettings.dev_mode)))
		dev_toggle.text = "Dev-Mode: ON" if DevSettings.dev_mode else "Dev-Mode: OFF"
		dev_toggle.pressed.connect(_on_dev_toggle_pressed)

	# --- Back ---
	if back_button:
		back_button.pressed.connect(_on_back_pressed)

# --- Audio Ð»Ð¾Ð³Ð¸ÐºÐ° ---
func _on_master_volume_changed(value: float) -> void:
	# value 0â€“100 -> Ð¿ÐµÑ€ÐµÐ²Ð¾Ð´Ð¸Ð¼ Ð² dB
	var db = lerp(-40.0, 0.0, value / 100.0)
	var master_bus_index = AudioServer.get_bus_index("Master")
	if master_bus_index >= 0:
		AudioServer.set_bus_volume_db(master_bus_index, db)

	_options["master_volume"] = value
	_save_options()

func _on_music_volume_changed(value: float) -> void:
	var db = lerp(-40.0, 0.0, value / 100.0)
	var music_bus_index = AudioServer.get_bus_index("Music")
	if music_bus_index >= 0:
		AudioServer.set_bus_volume_db(music_bus_index, db)

	_options["music_volume"] = value
	_save_options()

# --- Video Ð»Ð¾Ð³Ð¸ÐºÐ° ---
func _on_fullscreen_toggled(pressed: bool) -> void:
	var mode = DisplayServer.WINDOW_MODE_FULLSCREEN if pressed else DisplayServer.WINDOW_MODE_WINDOWED
	DisplayServer.window_set_mode(mode)

	_options["fullscreen"] = pressed
	_save_options()

func _fill_resolutions() -> void:
	# Ð¿Ñ€Ð¸Ð¼ÐµÑ€Ñ‹ Ñ€Ð°Ð·Ñ€ÐµÑˆÐµÐ½Ð¸Ð¹
	var resolutions = [
		Vector2i(1280, 720),
		Vector2i(1600, 900),
		Vector2i(1920, 1080)
	]
	for i in resolutions.size():
		resolution_option.add_item("%d x %d" % [resolutions[i].x, resolutions[i].y], i)

func _on_resolution_selected(index: int) -> void:
	var text = resolution_option.get_item_text(index)
	var parts = text.split(" x ")
	var w = int(parts[0])
	var h = int(parts[1])
	DisplayServer.window_set_size(Vector2i(w, h))

	_options["resolution_index"] = index
	_options["resolution"] = [w, h]
	_save_options()

# --- Dev Ð»Ð¾Ð³Ð¸ÐºÐ° ---
func _on_dev_toggle_pressed() -> void:
	DevSettings.set_dev_mode(not DevSettings.dev_mode)
	dev_toggle.text = "Dev-Mode: ON" if DevSettings.dev_mode else "Dev-Mode: OFF"

	_options["dev_mode"] = DevSettings.dev_mode
	_save_options()

# --- Back ---
func _on_back_pressed() -> void:
	# Ð¡Ð¾Ñ…Ñ€Ð°Ð½ÑÐµÐ¼ Ð½Ð°ÑÑ‚Ñ€Ð¾Ð¹ÐºÐ¸ Ð¿ÐµÑ€ÐµÐ´ Ð²Ñ‹Ñ…Ð¾Ð´Ð¾Ð¼
	_save_options()
	
	print("ðŸ”™ ÐšÐ½Ð¾Ð¿ÐºÐ° 'ÐÐ°Ð·Ð°Ð´' Ð½Ð°Ð¶Ð°Ñ‚Ð°. Ð ÐµÐ¶Ð¸Ð¼: ", "Ð¼Ð¾Ð´Ð°Ð»ÑŒÐ½Ñ‹Ð¹" if _is_modal else "Ð¾Ñ‚Ð´ÐµÐ»ÑŒÐ½Ð°Ñ ÑÑ†ÐµÐ½Ð°")
	
	if _is_modal:
		# Ð’ Ð¼Ð¾Ð´Ð°Ð»ÑŒÐ½Ð¾Ð¼ Ñ€ÐµÐ¶Ð¸Ð¼Ðµ Ð¿Ñ€Ð¾ÑÑ‚Ð¾ Ð·Ð°ÐºÑ€Ñ‹Ð²Ð°ÐµÐ¼ Ð¾ÐºÐ½Ð¾
		close_modal()
	else:
		# Ð’ Ñ€ÐµÐ¶Ð¸Ð¼Ðµ Ð¾Ñ‚Ð´ÐµÐ»ÑŒÐ½Ð¾Ð¹ ÑÑ†ÐµÐ½Ñ‹ Ð²Ð¾Ð·Ð²Ñ€Ð°Ñ‰Ð°ÐµÐ¼ÑÑ Ð² Ð³Ð»Ð°Ð²Ð½Ð¾Ðµ Ð¼ÐµÐ½ÑŽ
		print("ðŸ”„ ÐŸÐµÑ€ÐµÑ…Ð¾Ð´ Ð² Ð³Ð»Ð°Ð²Ð½Ð¾Ðµ Ð¼ÐµÐ½ÑŽ...")
		# Ð˜ÑÐ¿Ð¾Ð»ÑŒÐ·ÑƒÐµÐ¼ Ð¿Ñ€ÑÐ¼Ð¾Ð¹ Ð²Ñ‹Ð·Ð¾Ð² Ñ Ð½ÐµÐ±Ð¾Ð»ÑŒÑˆÐ¾Ð¹ Ð·Ð°Ð´ÐµÑ€Ð¶ÐºÐ¾Ð¹
		var tree = get_tree()
		if tree:
			# Ð–Ð´Ñ‘Ð¼ Ð¾Ð´Ð¸Ð½ ÐºÐ°Ð´Ñ€ Ð¿ÐµÑ€ÐµÐ´ ÑÐ¼ÐµÐ½Ð¾Ð¹ ÑÑ†ÐµÐ½Ñ‹
			await get_tree().process_frame
			tree.change_scene_to_file("res://scenes/main_menu.tscn")
		else:
			print("âŒ ÐžÑˆÐ¸Ð±ÐºÐ°: get_tree() Ð²ÐµÑ€Ð½ÑƒÐ» null")

## ÐœÐµÑ‚Ð¾Ð´Ñ‹ Ð´Ð»Ñ Ñ€Ð°Ð±Ð¾Ñ‚Ñ‹ Ð² Ð¼Ð¾Ð´Ð°Ð»ÑŒÐ½Ð¾Ð¼ Ñ€ÐµÐ¶Ð¸Ð¼Ðµ
func open_modal() -> void:
	"""ÐžÑ‚ÐºÑ€Ñ‹Ð²Ð°ÐµÑ‚ Ð½Ð°ÑÑ‚Ñ€Ð¾Ð¹ÐºÐ¸ Ð² Ð¼Ð¾Ð´Ð°Ð»ÑŒÐ½Ð¾Ð¼ Ñ€ÐµÐ¶Ð¸Ð¼Ðµ"""
	_is_modal = true
	visible = true
	if dim_background:
		dim_background.visible = true
	if texture_rect:
		texture_rect.visible = false
	process_mode = Node.PROCESS_MODE_ALWAYS
	mouse_filter = Control.MOUSE_FILTER_STOP
	# ÐžÐ±Ð½Ð¾Ð²Ð»ÑÐµÐ¼ Ð·Ð½Ð°Ñ‡ÐµÐ½Ð¸Ñ Ð¿Ñ€Ð¸ Ð¾Ñ‚ÐºÑ€Ñ‹Ñ‚Ð¸Ð¸
	_load_options()
	_update_ui_values()

func close_modal() -> void:
	"""Ð—Ð°ÐºÑ€Ñ‹Ð²Ð°ÐµÑ‚ Ð¼Ð¾Ð´Ð°Ð»ÑŒÐ½Ð¾Ðµ Ð¾ÐºÐ½Ð¾ Ð½Ð°ÑÑ‚Ñ€Ð¾ÐµÐº"""
	visible = false

func toggle_modal() -> void:
	"""ÐŸÐµÑ€ÐµÐºÐ»ÑŽÑ‡Ð°ÐµÑ‚ Ð²Ð¸Ð´Ð¸Ð¼Ð¾ÑÑ‚ÑŒ Ð¼Ð¾Ð´Ð°Ð»ÑŒÐ½Ð¾Ð³Ð¾ Ð¾ÐºÐ½Ð°"""
	if visible:
		close_modal()
	else:
		open_modal()

func _update_ui_values() -> void:
	"""ÐžÐ±Ð½Ð¾Ð²Ð»ÑÐµÑ‚ Ð·Ð½Ð°Ñ‡ÐµÐ½Ð¸Ñ UI ÑÐ»ÐµÐ¼ÐµÐ½Ñ‚Ð¾Ð² Ð¸Ð· Ð·Ð°Ð³Ñ€ÑƒÐ¶ÐµÐ½Ð½Ñ‹Ñ… Ð½Ð°ÑÑ‚Ñ€Ð¾ÐµÐº"""
	if master_slider:
		master_slider.value = _options.get("master_volume", 80.0)
	if music_slider:
		music_slider.value = _options.get("music_volume", 70.0)
	if fullscreen_check:
		var is_fullscreen = bool(_options.get("fullscreen", DisplayServer.window_get_mode() == DisplayServer.WINDOW_MODE_FULLSCREEN))
		fullscreen_check.set_pressed_no_signal(is_fullscreen)
	if resolution_option:
		var res_index := int(_options.get("resolution_index", 1))
		if res_index >= 0 and res_index < resolution_option.item_count:
			resolution_option.select(res_index)
	if dev_toggle:
		DevSettings.set_dev_mode(bool(_options.get("dev_mode", DevSettings.dev_mode)))
		dev_toggle.text = "Dev-Mode: ON" if DevSettings.dev_mode else "Dev-Mode: OFF"

func _unhandled_input(event: InputEvent) -> void:
	# ESC Ð·Ð°ÐºÑ€Ñ‹Ð²Ð°ÐµÑ‚ Ð¾ÐºÐ½Ð¾ Ð½Ð°ÑÑ‚Ñ€Ð¾ÐµÐº Ñ‚Ð¾Ð»ÑŒÐºÐ¾ Ð² Ð¼Ð¾Ð´Ð°Ð»ÑŒÐ½Ð¾Ð¼ Ñ€ÐµÐ¶Ð¸Ð¼Ðµ
	if _is_modal and visible and event.is_action_pressed("ui_cancel"):
		close_modal()
		if get_viewport():
			get_viewport().set_input_as_handled()


func _load_options() -> void:
	_options = {}
	if not FileAccess.file_exists(OPTIONS_PATH):
		return

	var file := FileAccess.open(OPTIONS_PATH, FileAccess.READ)
	if not file:
		return

	var json_string := file.get_as_text()
	file.close()

	var json := JSON.new()
	if json.parse(json_string) != OK:
		return

	if json.data is Dictionary:
		_options = json.data


func _save_options() -> void:
	var file := FileAccess.open(OPTIONS_PATH, FileAccess.WRITE)
	if not file:
		return

	file.store_string(JSON.stringify(_options, "\t"))
	file.close()
